# amazon-bedrock-agentcore-samples

./: CONTRIBUTORS.md
01-tutorials/06-AgentCore-observability/00-enable-transaction-search-template/: enable_transaction_search.ipynb  transaction_search.yml
01-tutorials/06-AgentCore-observability/03-advanced-concepts/02-data-protection/: data_protection.ipynb  requirements.txt
02-use-cases/A2A-multi-agent-incident-response/: README.md  cleanup.py  deploy.py
02-use-cases/A2A-multi-agent-incident-response/cloudformation/: cognito.yaml  host_agent.yaml  monitoring_agent.yaml  web_search_agent.yaml
02-use-cases/A2A-multi-agent-incident-response/cloudformation/smithy-models/: monitoring-service.json
02-use-cases/A2A-multi-agent-incident-response/frontend/: package-lock.json  package.json
02-use-cases/A2A-multi-agent-incident-response/host_adk_agent/: agent.py  main.py
02-use-cases/A2A-multi-agent-incident-response/monitoring_strands_agent/: agent.py  agent_executor.py  main.py  memory_hook.py  pyproject.toml  requirements.txt  utils.py
02-use-cases/A2A-multi-agent-incident-response/monitoring_strands_agent/prompt/: __init__.py
02-use-cases/A2A-multi-agent-incident-response/test/: connect_agent.py
02-use-cases/A2A-multi-agent-incident-response/web_search_openai_agents/: agent.py  main.py
02-use-cases/A2A-multi-agent-incident-response/web_search_openai_agents/prompt/: __init__.py
02-use-cases/customer-support-assistant-vpc/mcp_dynamodb/: requirements.txt
02-use-cases/device-management-agent/: requirements.txt
(+5 files in other folders)
